--- a/mapafuncional/mapa.html
+++ b/mapafuncional/mapa.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="lala.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  
 </head>
 <body>
-    <div id="tarjeta">
-        <h4 id="region"></h4>
-        <h4 id="descripcion"></h4>
-        <h4 id="atractivo"></h4>
+    <div id="tarjeta" class="card " style="width: 18rem;">
+      <img id="imagen" src="" class="card-img-top" alt="">
+      <div class="card-body">
+        <p id="region" class="card-text"></p>
+        <p id="descripcion" class="card-text"></p>
+        <p id="atractivo" class="card-text"></p>
+      </div>
     </div>
     
     <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -110,6 +115,7 @@
      d="m 521.79183,294.84068 -0.20899,0.25 -0.28125,2.5586 -0.29883,3.58984 -0.53515,1.39648 0,0.20508 0.1875,0.65625 0.65625,0 0.0937,0.70117 -0.28125,0.375 0.1875,0.5625 0.28125,1.03125 0.42187,-0.1875 0.32618,0.32813 0.32812,0.6543 0.79688,0.14062 0.79687,0.84375 0.1875,0.70313 -0.0937,0.41992 0.23438,0.9375 0.51367,0.28125 -0.28125,0.46875 0.1875,0.42187 -1.26367,-0.0937 -0.1875,0.60742 2.06054,0.1875 0.23438,-0.46679 0.375,0 0.23437,0.46679 0.75,0.0469 0.2793,-0.32813 0.79687,1.21875 0.60938,0.42188 0.5625,0 0.375,0.28125 0.32617,0.14062 0.14063,0.41993 -0.56055,0.60937 -0.46875,0.23438 -0.14063,0.60937 0,0.60938 0,0.56054 0.51563,-0.1875 0.98242,0.23438 0.5625,-0.37305 0.70313,0.18555 0.28125,0 0.1875,-0.32617 0.23242,0 0.60937,0.37304 0.42188,0 0.60937,-0.0469 0.5625,-0.23242 0.32617,-0.32813 0.23438,-0.5625 0.375,-0.1875 0.51562,-0.0469 0.60938,0.23437 0.375,0.14063 0.37305,0.28125 0.42187,-0.28125 0.51563,0 0.46875,-0.14063 0.32812,0.14063 0.0469,-0.60938 0.1875,-0.375 0,-0.42187 0,-0.32618 0,-0.375 0.42188,-0.14062 0.37304,0.32812 0.46875,0.37305 0.0937,0.375 0.46875,0.28125 0.28125,0.0469 0.23438,-0.32813 0.375,0.14063 0.41992,0.14062 0.375,0.375 0.5625,0.1875 0.5625,-0.14062 0.375,-0.14063 0.5625,0.375 0.35547,-0.0859 0.0137,-0.0801 -0.50977,-2.4707 -0.54101,-2.30078 0.70117,-1.83008 1.16992,-3.43945 0.28907,-1.10938 0.25976,-0.14062 -0.0898,-0.0488 -0.41992,-0.49023 -0.15039,-0.6211 -0.0996,-0.51953 -0.49024,-0.25 -0.33007,0.0508 -0.26954,0.19922 -1.1289,1.43946 -0.11133,0.45117 -0.0391,0.3789 -0.41016,0.46094 -0.58008,-0.0801 -1.41015,-0.78125 -0.29102,-0.28906 -1.52929,-1.25977 -1.18946,-0.35937 -0.89062,-0.35156 -0.51953,-0.33008 -0.34961,-0.33984 -0.17969,-0.43946 -0.36133,-0.7793 -0.92969,-0.15039 -0.33984,0.0996 -0.35937,0.15039 -0.32032,-0.0195 -0.76953,-0.18164 -0.25,-0.21875 -0.10156,-0.33008 -0.18945,-0.43945 -1.09961,-1.16016 -0.10938,0.53907 0.0293,0.43945 -1.01953,1.15039 -1.75,-0.0488 -0.36133,-0.12109 -2.71875,-1.41992 -2.06054,-1.82031 -0.0996,-0.60938 -0.22071,-0.24023 -1.58984,-0.70899 z"
       />
 </svg>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="local.js"></script>
 </body>
 </html>
