--- a/mapafuncional/mapa.html
+++ b/mapafuncional/mapa.html
@@ -10,8 +10,8 @@
   
 </head>
 <body>
-    <div id="tarjeta" class="card " style="width: 18rem;">
-      <img id="imagen" src="" class="card-img-top" alt="">
+    <div id="tarjeta" class="card mt-2" style="width: 40%;">
+      <img id="imagen" src="" class="card-img-top" alt="" style="height: 28vh; object-fit: cover;">
       <div class="card-body">
         <p id="region" class="card-text"></p>
         <p id="descripcion" class="card-text"></p>
