--- a/mapafuncional/mapa.html
+++ b/mapafuncional/mapa.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="tarjeta" class="card mt-2" style="width: 40%;">
-      <img id="imagen" src="" class="card-img-top" alt="" style="height: 28vh; object-fit: cover;">
+      <img id="imagen" src="" class="card-img-top h-10" alt=""  style="object-fit: cover;">
       <div class="card-body">
         <p id="region" class="card-text"></p>
         <p id="descripcion" class="card-text"></p>
