--- a/mapafuncional/mapa.html
+++ b/mapafuncional/mapa.html
@@ -18,7 +18,10 @@
         <p id="atractivo" class="card-text"></p>
       </div>
     </div>
-    
+    <div>
+    <input type="text" id="titulo">
+    <button type="button" onclick="Reemplazar()">Enviar</button>
+   </div>
     <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <svg
    xmlns:mapsvg="http://mapsvg.com"
