--- a/mapafuncional/mapa.html
+++ b/mapafuncional/mapa.html
@@ -26,7 +26,7 @@
         <input placeholder="titulo" type="text" name="Titulo" id="Ctitulo">
         <input placeholder="descripcion" type="text" name="descripcion" id="">
         <input placeholder="atractivos" type="text" name="atractivos" id="">
-        <button class="actualizar" onclick="cambiame()"></button>
+        <button class="actualizar" onclick="cambiame()">Actualizar</button>
       </div>
     </div>
 
