--- a/mapafuncional/mapa.html
+++ b/mapafuncional/mapa.html
@@ -21,11 +21,13 @@
     </div>
     <div id="tarjetaMOD" class="card mt-2 d-none" style="width: 40%;">
       <h1>modifique datos de region</h1>
-      <input type="file" name="Inserte imagen" id="">
+      <input type="file" name="Inserte imagen" id="Cimagen">
       <div class="card-body">
         <input placeholder="titulo" type="text" name="Titulo" id="Ctitulo">
-        <input placeholder="descripcion" type="text" name="descripcion" id="">
-        <input placeholder="atractivos" type="text" name="atractivos" id="">
+        <input placeholder="descripcion" type="text" name="descripcion" id="Cdescrip">
+        <input placeholder="atractivos" type="text" name="atractivos" id="Catractivo1">
+        <input placeholder="atractivos" type="text" name="atractivos" id="Catractivo2">
+        <input placeholder="atractivos" type="text" name="atractivos" id="Catractivo3">
         <button class="actualizar" onclick="cambiame()">Actualizar</button>
       </div>
     </div>
