--- a/mapafuncional/mapa.html
+++ b/mapafuncional/mapa.html
@@ -21,7 +21,7 @@
     </div>
     <div id="tarjetaMOD" class="card mt-2 d-none" style="width: 40%;">
       <h1>modifique datos de region</h1>
-      <input type="file" name="Inserte imagen" id="Cimagen">
+      <input type="file" name="Inserte imagen" id="Cimagen" onchange="cambiame()">
       <div class="card-body">
         <input placeholder="titulo" type="text" name="Titulo" id="Ctitulo">
         <input placeholder="descripcion" type="text" name="descripcion" id="Cdescrip">
