--- a/mapafuncional/mapa.html
+++ b/mapafuncional/mapa.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/cadd79f153.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="lala.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
@@ -20,7 +21,8 @@
       </div>
     </div>
     <div id="tarjetaMOD" class="card mt-2 d-none" style="width: 40%;">
-      <h1>modifique datos de region</h1>
+      <i onclick="cerrarMod()" class="fa-solid fa-xmark"></i>
+      <h1>Modifique datos de region</h1>
       <input type="file" name="Inserte imagen" id="Cimagen" onchange="cambiame()">
       <div class="card-body">
         <input placeholder="titulo" type="text" name="Titulo" id="Ctitulo">
